--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ h2 {
     font-family: 'Noto Serif Display', serif;
     margin-top: 180px;
 }
+.box_content1 p {
+    color: rgb(75, 75, 75);
+}
 .content1 h1 h5 {
     font-weight: bold;
 }
